final validation
